--- a/config.toml
+++ b/config.toml
@@ -32,8 +32,8 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
   avatar = "img/blowizer.png"
 
 [Params.sidebar]
-  home = "right" # Configure layout for home page
-  list = "left"  # Configure layout for list pages
+  home = "left" # Configure layout for home page
+  list = "right"  # Configure layout for list pages
   single = false # Configure layout for single pages
   # Enable widgets in given order
   widgets = ["search", "recent", "categories", "taglist", "social"]
