--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,14 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ] # 当推送到 main 分支时触发
-  workflow_dispatch: # 允许手动触发
+    branches: [ "master" ]
+  workflow_dispatch:
+
+# 设置权限，允许 GITHUB_TOKEN 推送代码
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -13,13 +19,13 @@ jobs:
       - name: Checkout blog source
         uses: actions/checkout@v4
         with:
-          submodules: recursive # 如果使用了子模块，请启用此选项
-          token: ${{ secrets.ACCESS_TOKEN }}
+          submodules: recursive
+          token: ${{ secrets.BLOG_ACCESS_TOKEN }}
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'
+          hugo-version: '0.128.0'  # 建议指定具体版本
           extended: true
 
       - name: Build Hugo site
@@ -28,13 +34,11 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          # 生成并推送到的目标仓库
+          token: ${{ secrets.BLOG_ACCESS_TOKEN }}
           external_repository: wugjun/wugjun.github.io
-          # 推送到的目标分支
           publish_branch: master
-          # 推送的文件目录（Hugo 生成结果）
           publish_dir: ./public
-          # 用于推送的个人访问令牌 (PAT)
-          github_token: ${{ secrets.ACCESS_TOKEN }}
-          # 可选：保留提交历史
-          force_orphan: false
+          github_token: ${{ secrets.BLOG_ACCESS_TOKEN }}
+          # 可选：配置用户信息
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
