--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.BLOG_ACCESS_TOKEN }}
+          personal_token: ${{ secrets.BLOG_ACCESS_TOKEN }}
           external_repository: wugjun/wugjun.github.io
           publish_branch: master
           publish_dir: ./public
