--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           extended: true
 
       - name: Build Hugo site
-        run: hugo --minify
+        run: hugo --minify --buildDrafts
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
