增加部署到微信公众号

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
+# Hugo 构建输出
 public/
+
+# Python 虚拟环境
+scripts/.venv/
+scripts/venv/
+scripts/env/
+.venv/
+venv/
+env/
+
+# Python 缓存文件
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# 已发布文章追踪文件（可能包含敏感信息）
+scripts/published_articles.json
+
+# 环境变量文件（包含敏感信息）
+.env
+.env.local
+.env.*.local
+
+# 日志文件
+*.log
+deploy_history.log
+scripts/*.log
+
+# 临时文件
+*.tmp
+*.temp
+.DS_Store
+*.swp
+*.swo
+*~
+
+# IDE 配置文件
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# 备份文件
+*.bak
+*.backup
